# feedverse

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/: backend.dockerfile
scripts/: web-prestart.sh  web-start-reload.sh
