[tool.poetry]
name = "feedverse"
version = "0.1.0"
description = ""
authors = ["Mário Victor Ribeiro Silva <mariovictorrs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.92.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.251"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
